# todo-list

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yml  justfile
migrations/2023-12-27-175849_create_todos/: up.sql
src/: main.rs  state.rs
src/backend/: controller.rs  dto.rs  model.rs
src/backend/database/: memory.rs  mod.rs  postgres.rs  spec.rs
src/frontend/: app.js  index.html  styles.css
src/todo/: mod.rs  model.rs
src/todo/database/: memory.rs  postgres.rs  schema.rs  spec.rs
