[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.6.0", features = ["serde", "v4"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
actix-web = "4"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
async-trait = "0.1.75"
dotenv = "0.15.0"
diesel = { version = "2.1.4", features = ["r2d2", "postgres", "chrono", "uuid"] }
diesel_migrations = "2.1.0"
actix-cors = "0.6.5"